[package]
name = "orbit"
version = "0.1.0"
authors = ["wooker <zakhar.semyonov@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
esp32c3 = ["dep:esp32c3", "dep:esp-riscv-rt"]
stm32f103 = ["stm32f1xx-hal/stm32f103", "dep:cortex-m", "dep:cortex-m-rt", "dep:panic-halt"]

[dependencies]
# log = { version = "0.4.20" }
esp32c3 = { version = "0.22.0", features = ["rt"], optional = true }
# esp-backtrace = { version = "0.11.1", features = [
#     "esp32c3",
#     "println",
#     "panic-handler",
#     "exception-handler", 
# ] }
# esp-println = { version = "0.9.1", features = ["esp32c3"] }
# hashbrown = { version = "0.14.5", features = [""] }
# esp-alloc = "0.3.0"
esp-riscv-rt = { version = "0.8.0", optional = true }
stm32f1xx-hal = { version = "0.10.0", optional = true }
cortex-m = { version = "0.7.7", optional = true }
cortex-m-rt = { version = "0.7.3", optional = true }
panic-halt = { version = "0.2.0", optional = true }

[workspace]
exclude = [
    "chips/esp32-c3",
    "chips/stm32f103",
    "chips/test"
]

