[package]
name = "orbit"
version = "0.1.0"
authors = ["wooker <zakhar.semyonov@gmail.com>"]
edition = "2021"

[workspace]
members = [
    "orbit-kernel",
    "orbit-build",
    "chips/esp32c3",
    "chips/stm32f103",
]

[dependencies]
orbit-stm32f103 = { path = "chips/stm32f103", optional = true }

[build-dependencies]
orbit-build = { version = "0.1.0", path = "orbit-build" }

[features]
stm32f103 = ["dep:orbit-stm32f103"]

[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
