[package]
name = "esp32-c3"
version = "0.1.0"
authors = ["wooker <zakhar.semyonov@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = { version = "0.7.17", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = "1.0.0"
orbit = { path= "../../", features = ["esp32c3"]}

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 0
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
strip = true
