[package]
name = "stm32f103-orbit"
version = "0.1.0"
authors = ["wooker <zakhar.semyonov@gmail.com>"]
edition = "2021"


[package.metadata.docs.rs]
default-target = "thumbv7m-none-eabi"
features       = ["embedded-hal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbit = { path= "../../", features = [ "stm32f103"] }
# panic-halt   = "0.2.0"

[build-dependencies]
basic-toml   = "0.1.9"
cfg-if       = "1.0.0"
stm32f1      = { version = "0.15.1", features = [ "stm32f103" ] }
serde        = { version = "1.0.197"}

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 0
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
strip = true
